fix(css): chip spacing

--- a/module/src/scss/_chip.scss
+++ b/module/src/scss/_chip.scss
@@ -42,6 +42,12 @@
   }
 }
 
+.chips-inline {
+  .active + .active {
+    margin-left: .5rem;
+  }
+}
+
 .chip {
   display: none;
   align-items: center;
@@ -60,10 +66,6 @@
 
   &.active {
     display: flex;
-  }
-
-  .chips-inline & {
-    margin-right: .5rem;
   }
 
   .chips-block & {
